修改参考资料

--- a/Reference/电力电子方向硬件入门指南.md
+++ b/Reference/电力电子方向硬件入门指南.md
@@ -1,19 +1,40 @@
 # 电力电子硬件入门指南  
+本文档面向全国大学生电子设计竞赛电力电子方向，介绍硬件相关入门基础知识  
 作者： 电气23.3 毛晨镔  
 日期：2025/07/04  
-本文档面向全国大学生电子设计竞赛电力电子方向，介绍硬件相关入门基础知识  
 
 - [电力电子硬件入门指南](#电力电子硬件入门指南)
   - [通用器件](#通用器件)
     - [电容](#电容)
+      - [多层陶瓷电容（MLCC）：](#多层陶瓷电容mlcc)
+      - [电解电容：](#电解电容)
+      - [MKP电容](#mkp电容)
+      - [瓷片电容](#瓷片电容)
+      - [聚丙烯电容（CBB电容）](#聚丙烯电容cbb电容)
+      - [安规电容](#安规电容)
     - [电感](#电感)
+      - [直插电感](#直插电感)
+      - [共模电感/差模电感](#共模电感差模电感)
+      - [功率电感](#功率电感)
+      - [绕线电感](#绕线电感)
     - [电阻](#电阻)
+      - [采样电阻](#采样电阻)
+      - [普通电阻](#普通电阻)
+      - [绕线电阻](#绕线电阻)
+      - [水泥电阻](#水泥电阻)
     - [连接线](#连接线)
   - [功率器件](#功率器件)
     - [栅极驱动器](#栅极驱动器)
     - [MOSFET](#mosfet)
     - [二极管](#二极管)
+      - [肖特基](#肖特基)
+      - [开关二极管](#开关二极管)
+      - [快恢复](#快恢复)
+      - [整流二极管](#整流二极管)
+      - [稳压二极管](#稳压二极管)
+      - [TVS/ESD二极管](#tvsesd二极管)
     - [整流桥](#整流桥)
+    - [理想二极管](#理想二极管)
   - [集成器件](#集成器件)
     - [运放](#运放)
     - [比较器](#比较器)
@@ -37,38 +58,27 @@
 选型参数：用途、ESR、频率、耐压、容值  
 寄生参数：ELR、ESL，低频以ESR为主，高频考虑ESL谐振  
 
-电解电容ESL极大，10KHz左右即可发生谐振，高频下呈现感性。  
-**栅极自举电容绝对不可以用电解电容，必须用MLCC**  
+![电容特性](Pictures\image.png)
+
+注意事项：
+ - 电容注意耐压值，建议降压为原来90%使用  
+ - 电解电容ESL极大，10KHz左右即可发生谐振，高频下呈现感性。  
+ - 用电解电容滤波时，必须并联MKP（功率）/MLCC（低压）  
+ - **栅极自举电容绝对不可以用电解电容，必须用MLCC**  
+ - 任何低压模拟信号，均推荐MLCC+贴片+C0G/NP0/X7R  
 
 ![电容分类](Pictures\image2.png)
 
-![电容特性](Pictures\image.png)
-
-信号质量敏感/高频信号必须用MLCC  
-
-瓷片电容：  
-耐压最高，容值最小，高频性能极好。电赛不会出现只能用瓷片电容的情况，受限于容值，瓷片电容比MLCC用的少  
-
-聚丙烯电容（CBB电容）：  
-无极性，交直流耐压高，容值（10uF/400V）偏小  
-一般选400V/630V耐压用来逆变器输出滤波  
-
-![CBB电容](Pictures\418DAE751D8BFA60D9AC61D49D96AFE8.webp)
-
-MKP电容：  
-俗称小黄，无极性，常用于EMI滤波、输出滤波等，直流耐压极高，交流标称250V耐压，直流耐压2000V以上，滤波效果好于CBB，容值小于CBB  
-
-多层陶瓷电容（MLCC）：  
+#### 多层陶瓷电容（MLCC）：  
 一般贴片无极性的电容都是MLCC，直插独石电容也为MLCC  
-性能好，高频特性好，但是受限于封装，容值不大（0805最大10uF），一般50V耐压。
-MLCC分为多种材料，一般C0G\NP0>X7R>X5R  
-**模拟信号链用C0G/NP0，去耦用X7R**
+性能好，高频特性好，但是受限于封装，容值不大（0805最大10uF），一般50V耐压。  
+更高耐压需要降低容值/增大封装  
 常用于采样/供电去耦等低压场景  
-**采样等模拟回路建议无脑贴片，不要用直插，直插会增大干扰**  
+MLCC分为多种材料，一般C0G\NP0>X7R>X5R，X5R为底限  
 
 ![贴片电容](Pictures\image-13.png)
 
-电解电容：  
+#### 电解电容：  
 分为铝电解电容、钽电解电容，有极性，**钽电容一反接就爆炸**  
 容值最大（4700uF），耐压居中，**注意极性，高频特性很差**，ESR、ESL大  
 一般用于整流的直流输出滤波  
@@ -79,13 +89,29 @@ MLCC分为多种材料，一般C0G\NP0>X7R>X5R
 
 ![高频电解电容](Pictures\93F70CBD408EADF4B3EF990C46CDC6C2.webp)  
 
-小寄巧：  
-1、AMS1117的输出滤波要用钽电容，也可以用MLCC+1Ω电阻解决  
-2、电解电容在10K以上表现为感性，所以可以在紧靠功率器件处并MLCC，减少电流回路面积，同时在高频处提供滤波电容。  
-3、MLCC一般为50V耐压，需要多个串联以提高耐压  
-4、整流/逆变的直流侧，需要大容量电解电容稳定母线电压，也需要MKP/CBB电容吸收高频干扰  
-5、换言之，在需要电解电容的情况下，并一个MKP/CBB电容总是没错的  
-6、信号回路建议使用X7R/C0G/NP0的MLCC  
+#### MKP电容
+耐压高，容值较小，滤波效果好。常用于变流器输出滤波。
+推荐厦门法拉公司的MKP电容
+常用系列：
+MKP6x 安规电容，电赛不常用，常用于成熟工业品的输入EMI与保护  
+MKP25 MKP电容，用于直流滤波  
+MKP21 MKP电容，用于交流滤波  
+MKP21和MKP25不建议混用  
+
+#### 瓷片电容  
+耐压最高，容值最小，高频性能极好。电赛不会出现只能用瓷片电容的情况，受限于容值，瓷片电容比MLCC用的少  
+
+#### 聚丙烯电容（CBB电容） 
+无极性，交直流耐压高，容值（10uF/400V）偏小  
+一般选400V/630V耐压用来逆变器输出滤波，备选方案，优先MKP  
+滤波效果：MKP>安规电容（小黄）>CBB  
+
+![CBB电容](Pictures\418DAE751D8BFA60D9AC61D49D96AFE8.webp)
+
+#### 安规电容  
+俗称小黄/小灰。常用于EMI滤波。耐压极高。  
+小黄：X电容，并联在L-N之间  
+小灰：Y电容，并联在L-E、N-E（E：系统地）之间  
 
 ### 电感  
 分类：直插电感、功率电感、绕线电感  
@@ -101,22 +127,24 @@ MLCC分为多种材料，一般C0G\NP0>X7R>X5R
 
 ![电感图片](Pictures\1902877-20211125221356226-1416170653.png)
 
-直插电感：  
+#### 直插电感  
 模拟滤波器，饱和电流极小（uA级），常用于信号处理电路  
 
-共模电感/差模电感：  
+#### 共模电感/差模电感  
 两个隔离绕组共用一个磁芯，通过绕组绕向产生同向/反向的磁场，从而针对性滤除共模/差模信号  
 可以在逆变输出、整流输入侧加入共模电感（EMI），以提高输入输出指标  
+顺序：桥臂电感->滤波电容->共模电感  
 
-功率电感：  
+#### 功率电感  
 常用一体成型功率电感，自带屏蔽层，电磁泄漏少，非一体成型对外干扰大。一般用于辅助电源的DCDC部分，不用于主回路，饱和电流大（1-10A），感值小（uH级）  
 
 ![功率电感](Pictures\62E8258CD09D83572D2DF1B549393419.webp)  
 
 工字电感磁路裸露，对外干扰大，需要挖空底部铺铜等特殊操作，从而降低对外干扰  
 
-绕线电感：  
+#### 绕线电感  
 感值最大（1-10mH），饱和电流最大（1-30A），体积大，常用于整流/逆变的交流侧滤波  
+可以通过**多线并绕**提高效率  
 
 ![绕线电感](Pictures\image1.png)  
 
@@ -126,10 +154,10 @@ MLCC分为多种材料，一般C0G\NP0>X7R>X5R
 
 ![电阻](Pictures\10_12.svg)
 
-采样电阻：  
+#### 采样电阻  
 用于采集电流，搭配高增益仪表放大器，锰铜合金,常用1206/2512封装，阻值极小（mΩ级）  
 
-普通电阻：  
+#### 普通电阻  
 直插/贴片两种，直插封装按最大功率分类，贴片封装按尺寸分类  
 精度等级：0.1%/1%/5%  
 功率等级：1/16w,1/8w,1/4w,1/2w,1w  
@@ -137,12 +165,12 @@ MLCC分为多种材料，一般C0G\NP0>X7R>X5R
 根据制作工艺不同，分为金属膜/碳膜/厚膜/薄膜等类别  
 采样模块建议使用0.1%的贴片电阻，以减小校准的时间  
 
-绕线电阻：  
+#### 绕线电阻  
 电源题作为负载使用，绿色绕线电阻，功率可达50W及以上，阻值可调（滑动变阻器）  
 
 ![功率电阻](Pictures\image-11.png)
 
-水泥电阻：  
+#### 水泥电阻  
 大功率电阻，绕线后用耐高温水泥封装，白色。电源题作为负载使用，功率可达50w及以上  
 
 ![水泥电阻](Pictures\image-12.png)
@@ -152,7 +180,7 @@ MLCC分为多种材料，一般C0G\NP0>X7R>X5R
 美标AWG，表示到该线径抽细的次数，**AWG越大，线越细**  
 低压供电（采样、单片机等）：XH2.54  
 功率供电（功率主拓扑、辅助电源输入）：1平方多芯铜线  
-模拟线路可以用XH2.54（个人感觉没必要用SMA）  
+模拟线路可以用XH2.54+双绞线，做好差分传输（个人感觉没必要用SMA/屏蔽）  
 
 ## 功率器件  
 ### 栅极驱动器  
@@ -195,6 +223,7 @@ Cgs的大小会影响驱动电路的功耗与开关速度。
 4、常见的全控功率器件包括MOSFET、IGBT  
 MOSFET根据半导体材料不同分为SiFET、SiCFET、GaNFET  
 电赛用100V，10A以上的硅基MOSFET即可  
+当然，富哥可以直接上半桥GaN MOSFET，推荐ISG3202  
 
 5、Vds高是必要的，但是过高不是好事。过高的Vds会引入更大的Rdson、Qg，导致损耗更大、开关更慢  
 
@@ -225,27 +254,28 @@ TO263散热好，好到你想拆都拆不下来。什么？管子炸了？重新焊一板都比拆管子快！
 **自举二极管需要用肖特基/快恢复，耐压大于直流输入电压/交流输入电压**  
 **MOS管可以额外反并联肖特基二极管，要求肖特基二极管压降小于体二极管压降**  
 
-常用封装：SMA(小功率)、SMC（大功率）、TO-220（直插）、TO-263（贴片）、DO-201（引线）  
+常用封装：SMA(小功率)、SMC（大功率）、TO-220（直插）、TO-263（贴片）、DO-201（引线）
+TO-277  
 
 ![封装](Pictures\image-14.png)
 
-肖特基：  
+#### 肖特基  
 金属-半导体，多子载流，**几乎没有反向恢复时间**，耐压较低,SK106，SK1010,SK810，ST20100  
 
-开关二极管：  
+#### 开关二极管  
 信号处理，反向回复时间短，电流较小，1N4148  
 
-快恢复：  
+#### 快恢复  
 兼具肖特基的短回复时间，与整流二极管的大电流、高耐压特性，FR607/FR307  
 
-整流二极管：  
+#### 整流二极管  
 高耐压，高过流，反向恢复时间长，压降大，常用于无控整流  
 
-稳压二极管：  
+#### 稳压二极管  
 反向击穿产生基准电压（并联电压基准）、信号/电源限幅保护  
 
-TVS/ESD二极管：  
-用于信号保护，通过反向击穿吸收浪涌电流/静电放电/雷击放电  
+#### TVS/ESD二极管  
+用于信号保护，通过反向击穿吸收浪涌电流/静电放电/雷击放电，常见于成熟工业品，电赛用不到  
 分为单向（一个二极管）/双向（两个二极管反向串联）  
 选型：保护电路性质（信号/电源），反向击穿电压，钳位电压，最大耗散功率  
 ESD用于保护高速数字/模拟信号，耗散功率小，结电容极低，1pF级  
@@ -258,6 +288,10 @@ TVS用于保护电源端口，耗散功率大，结电容大，10pF级
 常用于无控整流、PFC前级整流  
 常用系列：  
 GBU/GBJ/KBU  
+
+### 理想二极管
+在任何需要整流桥的场景下，**均建议优先考虑理想二极管**  
+通过MOSFET体二极管压降为电容充电，通过电荷泵技术产生高压驱动MOSFET，用导通电阻替换正向压降从而提高效率  
 
 ## 集成器件  
 ### 运放
@@ -278,7 +312,7 @@ GBU/GBJ/KBU
 比较器有推挽输出、开漏输出两种，一般推挽输出的传输延迟要小于开漏输出  
 封装一般为SOCI-8，选器件时考虑器件的Pin-To-Pin扩展能力  
 
-开漏输出：TLV1702、LM393  
+开漏输出：TLV1702  
 推挽输出：TLV3202、TLV3502  
 
 ### 基准源芯片  
