--- a/Reference/电力电子方向简介.md
+++ b/Reference/电力电子方向简介.md
@@ -32,7 +32,7 @@
 
 
 ## 考察方向
-**电力电子**方向  
+**电力电子技术**  
 对应电力电子化能量变换系统设计与控制（电气24版B方向）、柔性输电技术（电气23版C方向）  
 题目主要考察对大功率、大电流的变换与控制  
 核心部分为控制环路设计与功率拓扑设计  
@@ -46,6 +46,8 @@
 **对软件要求很高**，涉及到控制环路设计与参数整定，环路设计不好会导致炸管等事故  
 **环路高度数字化，相位时序敏感，慎用数字滤波器**  
 **用低压（5V/12V）控制高压（60Vdc、30Vac），需要隔离器件保护**  
+**出现多方向交叉**，25年B题出现电源、信号、仪器仪表交叉  
+**赛题难度逐年上升**，出现内卷性指标，25年A题发挥2按赛区最高最低线性回归给分  
 
 ## 考察指标
 ### 特点
@@ -162,8 +164,6 @@ THD：
 C2000软件开发、部分双向DCDC  
 [江协科技](https://space.bilibili.com/383400717)  
 STM32F1单片机（HAL+标准库）  
-[唐老师讲电赛](https://space.bilibili.com/28143041)  
-各种知识点都有  
 
 ### 常用网站
 [全国大学生电子设计竞赛培训网](https://www.nuedc-training.com.cn/)  
@@ -180,24 +180,26 @@ STM32F1单片机（HAL+标准库）
 ## 如何入门电力电子方向
 **刷真题**
 ### 硬件
-立创开源广场复现开源工程，把开关波形调好，把所有拓扑、模块做一遍  
+把开关波形调好，把所有拓扑、模块做一遍  
 ### 软件
 #### 单片机
 选一个适合的单片机（C2000\STM32），把PWM、ADC、PWM触发ADC、中断、UART、SPI等片内外设调好，选好合适的片外ADDA、屏幕，把相关驱动准备好  
 #### 控制算法
-搞清楚相关算法s域传递函数，搞清楚所有参数的实际含义，参数过大过小的现象，连续函数离散化，把所有算法在C里面实现一边，把往年赛题涉及到的控制环路算一遍，把基础拓扑的环路参数调好  
+搞清楚相关算法s域传递函数，搞清楚所有参数的实际含义，参数过大过小的现象，连续函数离散化，把所有算法在C里面实现一遍，把往年赛题涉及到的控制环路算一遍，把基础拓扑的环路参数调好  
 相关算法可以参考Ti在**C2000Ware数字电源库内的参考设计**，在根目录的sulutions文件夹内，网页版说明在本文件开头的常用网站内给出  
 
 ## 准备模块
 ### 功率拓扑
 单相/三相H桥（整流逆变）  
 UCC28180/UCC28019硬件PFC  
-四开关buck-Boost（DC-DC同相升降压，FSBB）  
+四开关Buck-Boost（DC-DC同相升降压，FSBB）  
+同步Buck、同步Boost  
 ACAC交流斩波  
 桥式二极管无控整流  
+理想二极管单相/三相无控整流  
 
 ### 无源器件
-大电流LC滤波器（5A，400V/630V）、大容值（2000uF）电解电容  
+MKP电容（630V）、滤波电感（饱和电流10A及以上）  
 
 ### 单片机相关
 电压电流采样、片外AD/DA  
