--- a/Reference/电力电子软件方向入门指南.md
+++ b/Reference/电力电子软件方向入门指南.md
@@ -1,7 +1,7 @@
 # 电力电子软件入门指南  
+本文档面向全国大学生电子设计竞赛电力电子方向，介绍软件相关入门基础知识  
 作者： 电气23.3 毛晨镔  
 日期：2025/07/04  
-本文档面向全国大学生电子设计竞赛电力电子方向，介绍软件相关入门基础知识  
 
 - [电力电子软件入门指南](#电力电子软件入门指南)
   - [MCU与工具链](#mcu与工具链)
@@ -12,6 +12,13 @@
     - [相关软件](#相关软件)
     - [芯片设计工具](#芯片设计工具)
   - [控制算法](#控制算法)
+    - [仿真建模](#仿真建模)
+    - [数理基础](#数理基础)
+    - [单机算法](#单机算法)
+    - [调制发波](#调制发波)
+    - [并机并网](#并机并网)
+    - [硬件驱动](#硬件驱动)
+    - [信号分析](#信号分析)
   - [调制方法分析](#调制方法分析)
     - [单极性](#单极性)
     - [双极性](#双极性)
@@ -19,12 +26,14 @@
 
 
 ## MCU与工具链  
-**底线：至少要带FPU**  
-个人观点：TMS320F28388D>TMS320F28379D>STM32H7>TMS320F28335>STM32G4>STM32F4>>STM32F1
+基础要求：FPU，差分ADC，6路以上带死区同步PWM  
+个人观点：TMS320F28388D>TMS320F28379D>STM32H7>TMS320F28335>STM32G4>STM32F4>>STM32F1  
+28388D/28379D为双核DSP，使用时可以当作单核使用以降低系统复杂度  
+
 ### C2000  
 **死贵，TI别惦记你那逼单片机了**  
-建议按照STM32F1->TMS320F28335的路线学习（28335英文手册+资料少+寄存器编程）  
-进阶可以考虑TMS320F28379D/TMS320F28388D  
+建议按照STM32F1->TMS320F28335->TMS320F28379D的路线学习（28335英文手册+资料少+寄存器编程）  
+进阶可以考虑TMS320F280049C/TMS320F28379D/TMS320F28388D  
 工具链：CCS+Sysconfig+C2000Ware、数字电源库、电机控制库+XDS110/XDS100V2  
 缺点：全英文资料，生态差，28335只有寄存器编程  
 优点：性能高  
@@ -34,7 +43,7 @@
 没用过  
 STM32F1（入门）->STM32F4（通用）/STM32G474（数字电源专用）/STM32H7(高性能)  
 生态好，网上教程一抓一大把  
-**至少STM32F4，需要支持FPU/DSP**  
+**最低STM32F4，需要支持FPU/DSP**  
 
 ### MSPM0
 哪来的人用这傻卵玩意？！  
@@ -55,21 +64,40 @@ STM32F1（入门）->STM32F4（通用）/STM32G474（数字电源专用）/STM32H7(高性能)
 4、模电工程师工具箱，ti开发的软件  
 
 ## 控制算法  
-功率拓扑s域建模  
-连续函数离散化  
+### 仿真建模
+功率拓扑s域建模，Matlab-Simulink  
+变流器拓扑在s域下的系统框图  
+
+### 数理基础
+拉普拉斯变换  
+连续函数离散化，首选Tustin（双线性）变换  
+
+### 单机算法
 对应拓扑的前馈解耦  
 直流量：**PID**（一般只用PI控制器，抗积分饱和，反算/分离积分/变积分/积分限幅）  
 交流量：**QPR**（准比例-谐振）、**Sync-PI**、**PIR**  
 坐标变换：**Clark变换**、**Park变换**  
-锁相环：**SOGI-PLL**（单相电网）、**SRF-PLL**（对称三相电网）、**DSOGI-PLL**（非对称三相电网）  
 **MPPT**（最大功率点跟踪），一般用于光伏背景下前级DC-DC输入  
-信号分析：**FFT**  
-并机并网：**主从控制**、**下垂控制**、**虚拟同步机VSG**  
-调制：**SPWM**、**SVPWM**、**单极性倍频**、**双极性**、**单极性**  
 电量计算：**RMS、平均值计算**、**各种坐标系下功率计算**  
-**相关器件驱动**（片内AD同步采样+PWM触发、PWM、中断、片外AD/DA、串口屏、OLED、TFT）  
+**PQ控制**  
+
+### 调制发波
+**SPWM**、**SVPWM**、**单极性倍频**、**双极性**、**单极性**、**DPWM**  
+
+### 并机并网
+锁相环：**SOGI-PLL**（单相电网）、**SRF-PLL**（对称三相电网）、**DSOGI-PLL**（非对称三相电网）  
+并机并网：**主从控制**、**下垂控制**、**虚拟同步机VSG**  
+
+### 硬件驱动
+单片机外设：ADC、DAC、ePWM、eCAP、DMA(STM32需要)、UART、SPI、CMPSS以及对应外设中断  
+外挂芯片：片外ADC、片外DAC、OLED屏  
+
+### 信号分析  
+**FFT**,加窗，频谱泄露，采样率、主频计算  
 
 ## 调制方法分析
+**最推荐使用单极性倍频调制**  
+**所有高频桥臂输出必须带电感**  
 ### 单极性
 一个桥臂50Hz，一个桥臂高频载波，半波周期内只有1个非0电平  
 优点：开关损耗低，谐波少  
@@ -81,8 +109,11 @@ STM32F1（入门）->STM32F4（通用）/STM32G474（数字电源专用）/STM32H7(高性能)
 缺点：开关损耗大，谐波大  
 
 ### 单极性倍频
+
 双桥臂高频开关，一个搭载正调制波，一个搭载负调制波，半波周期内只有Vdc一个非0电平  
 优点：H桥输出倍频，谐波少，无过零失真  
 缺点：共模电压大，开关损耗大，发波较为复杂（比双极性复杂，比单极性简单）  
+实现方法：调制波倒相法、载波倒相法。  
+载波由DSP产生，无法倒相，常用调制波倒相法。  
 
 ![调制方式](Pictures\10e17295c895655789e7c64eaad799e2.png)
