增加参考手册

--- a/Reference/电力电子方向关键模块设计指南.md
+++ b/Reference/电力电子方向关键模块设计指南.md
@@ -2,10 +2,62 @@
 本文按电赛电力电子方向常用模块，介绍模块设计注意事项  
 作者：SDUEE 23.3 毛晨镔  
 
+- [电力电子方向关键模块设计指南](#电力电子方向关键模块设计指南)
+  - [功率模块与栅极驱动](#功率模块与栅极驱动)
+    - [MOSFET选型](#mosfet选型)
+    - [PCB布局](#pcb布局)
+    - [栅极驱动](#栅极驱动)
+  - [滤波模块](#滤波模块)
+  - [采样模块](#采样模块)
+  - [辅助电源](#辅助电源)
+  - [主控底板](#主控底板)
+  - [数字环路](#数字环路)
+
 ## 功率模块与栅极驱动
+### MOSFET选型
+推荐系列：StrongIRFET2  
+MOS耐压（Vds）选100V,漏极电流(Ids)至少20A  
+高耐压会降低MOS开关性能和导通电阻，引入不必要的损耗；低耐压会频繁炸管  
+需要综合考虑栅极电荷、导通电阻  
+Qg大会增大开关损耗，Rds大会增大导通损耗，低Rds会导致大导通损耗  
+需要额外添加反并联二极管  
+
+### PCB布局
+驱动回路、功率回路都处在高速开关的情况下，跳变沿瞬间有着巨大的dv/dt、di/dt  
+因此对寄生电感、寄生电容及其敏感，寄生参数稍大，即会引起巨大的振铃，导致击穿/炸管  
+功率板上需要集成栅极驱动、功率拓扑、桥臂电感  
+栅极驱动与MOS集成，减少栅驱回路寄生电感，减小栅驱串联电阻，加快开关，减少驱动损耗  
+桥臂电感将MOS的方波电流转换为连续电流，减少di/dt，减少电流不连续、寄生电感引发的电压振铃  
+SW节点（桥臂中点与电感）面积尽可能小  
+驱动回路、功率回路环路面积尽可能小，优先考虑功率回路，其次考虑驱动回路  
+直流侧电解电容+MKP电容滤波  
+布线尽可能粗，功率线直接铺铜连接  
+UCC21520两侧地线隔离，下管驱动地、功率地单点连接  
+下管驱动电源到地并联10uF MLCC电容，自举电容必须用MLCC  
+MOS管需要反并联肖特基二极管  
+
+### 栅极驱动
+栅驱只推荐UCC21520，参考手册自举驱动即可  
+DIS直接下拉到地  
 
 ## 滤波模块
+顺序：桥臂电感->滤波电容->共模电感  
+桥臂电感储能，稳流  
+共模电感不储能，只滤波，无法取代桥臂电感  
+电感可以通过多线并绕提高效率  
+滤波电感在功率板，滤波电容单独在洞洞板（电流环需要采集电感电流）  
+LC无源滤波即可，LCL需要增加虚拟阻抗以抑制谐振点电压增益  
+高频桥臂必须添加桥臂电感，输出共模电感可加可不加  
+建议MKP电容（MKP21），单相并两桥臂之间，三相电容采用角接  
+角接滤波效果好（星三角等效，角接等效阻抗大），对耐压要求高（抗线电压）  
+桥臂电感在传递函数中等效为一阶滞后，电感过大会极大劣化环路相位裕度  
+常用值：桥臂电感470uH/680uH+滤波电容2uF+共模电感2mH  
 
 ## 采样模块
 
 ## 辅助电源
+
+## 主控底板
+
+## 数字环路
+
