添加参考资料

--- a/Reference/电力电子方向硬件入门指南.md
+++ b/Reference/电力电子方向硬件入门指南.md
@@ -45,9 +45,6 @@
     - [系统供电设计](#系统供电设计)
     - [滤波器](#滤波器)
     - [栅极驱动](#栅极驱动)
-  - [相关模块](#相关模块)
-    - [辅助电源](#辅助电源)
-    - [屏幕](#屏幕)
 
 ---
 
@@ -353,7 +350,7 @@ GBU/GBJ/KBU
 优点：面积小，拓扑简单，纹波小  
 缺点：电流小，效率低  
 
-**LDO只能给运放供电，剩余的器件供电（屏幕、单片机等）请用DCDC供电**  
+**LDO只能给运放供电，剩余的器件供电（串口屏、单片机等）请用DCDC供电**  
 **设计供电时考虑模块功率**  
 **LDO需要降额至原输出电流的50%-80%使用**  
 
@@ -367,23 +364,6 @@ GBU/GBJ/KBU
 电源方向极少用到有源滤波器  
 
 ### 栅极驱动
-**优先用自举**，**FSBB可以考虑用隔离电源**  
+**优先用自举**  
 自举占空比**不能做到0-100%**，建议**5%-95%**，上管自举电容需要时间充电  
 **无脑UCC21520**  
-
-## 相关模块  
-### 辅助电源  
-**辅助电源建议直接购买成品模块**
-AC-DC和DC-DC两种，DC-DC考虑耐压，建议100V以上输入  
-https://shop113138875.taobao.com  
-**最大400V直流输入，恐怖如斯**  
-**实验室35Vdc输入的DCDC一定用不了，喜欢我电源题60V直流电源吗**  
-所有电源模块都需要考虑输入电压、输出电压、输出电流、电流纹波  
-
-### 屏幕  
-屏幕主要三种：OLED、TFT、串口屏  
-OLED：常用0.96'IIC屏幕，低功耗，显示面积小，单色  
-TFT：全彩，功耗居中，常用1.8'  
-串口屏：全彩，UART通信，可触摸，面积最大，一般用来做按钮、UI,耗电量最大,无脑陶晶驰  
-电源题对UI要求很低，显示数据很少，一般0.96寸OLED即可。  
-题目一般有重量/效率要求，用其他屏幕容易寄  
