--- a/Reference/电力电子方向软件入门指南.md
+++ b/Reference/电力电子方向软件入门指南.md
@@ -19,10 +19,6 @@
     - [并机并网](#并机并网)
     - [硬件驱动](#硬件驱动)
     - [信号分析](#信号分析)
-  - [调制方法分析](#调制方法分析)
-    - [单极性](#单极性)
-    - [双极性](#双极性)
-    - [单极性倍频](#单极性倍频)
 
 
 ## MCU与工具链  
@@ -74,19 +70,18 @@ STM32F1（入门）->STM32F4（通用）/STM32G474（数字电源专用）/STM32H7(高性能)
 
 ### 单机算法
 对应拓扑的前馈解耦  
-直流量：**PID**（一般只用PI控制器，抗积分饱和，反算/分离积分/变积分/积分限幅）  
-交流量：**QPR**（准比例-谐振）、**Sync-PI**、**PIR**  
+直流量：**PID**（一般只用PI控制器，抗积分饱和，反算/分离积分/变积分/积分限幅）、**PIR**  
+交流量：**QPR**（准比例-谐振）、**Sync-PI**  
 坐标变换：**Clark变换**、**Park变换**  
-**MPPT**（最大功率点跟踪），一般用于光伏背景下前级DC-DC输入  
+**MPPT**：电导增量法、扰动观测法，一般用于光伏背景下前级DC-DC输入  
 电量计算：**RMS、平均值计算**、**各种坐标系下功率计算**  
-**PQ控制**  
 
 ### 调制发波
-**SPWM**、**SVPWM**、**单极性倍频**、**双极性**、**单极性**、**DPWM**  
+**SPWM**、**SVPWM**、**DPWM**、**单极性倍频**、**双极性**、**单极性**  
 
 ### 并机并网
 锁相环：**SOGI-PLL**（单相电网）、**SRF-PLL**（对称三相电网）、**DSOGI-PLL**（非对称三相电网）  
-并机并网：**主从控制**、**下垂控制**、**虚拟同步机VSG**  
+并机并网：**主从控制**、**下垂控制**、**虚拟同步机VSG**、**PQ控制**  
 
 ### 硬件驱动
 单片机外设：ADC、DAC、ePWM、eCAP、DMA(STM32需要)、UART、SPI、CMPSS以及对应外设中断  
@@ -94,26 +89,3 @@ STM32F1（入门）->STM32F4（通用）/STM32G474（数字电源专用）/STM32H7(高性能)
 
 ### 信号分析  
 **FFT**,加窗，频谱泄露，采样率、主频计算  
-
-## 调制方法分析
-**最推荐使用单极性倍频调制**  
-**所有高频桥臂输出必须带电感**  
-### 单极性
-一个桥臂50Hz，一个桥臂高频载波，半波周期内只有1个非0电平  
-优点：开关损耗低，谐波少  
-缺点：过零失真大，共模电压大，PWM发波复杂  
-
-### 双极性
-对管同时导通，双桥臂高频，半波周期内有±VDC2个非0电平  
-优点：1个PWM模块即可完成，PWM发波简单，共模电压小，无过零失真  
-缺点：开关损耗大，谐波大  
-
-### 单极性倍频
-
-双桥臂高频开关，一个搭载正调制波，一个搭载负调制波，半波周期内只有Vdc一个非0电平  
-优点：H桥输出倍频，谐波少，无过零失真  
-缺点：共模电压大，开关损耗大，发波较为复杂（比双极性复杂，比单极性简单）  
-实现方法：调制波倒相法、载波倒相法。  
-载波由DSP产生，无法倒相，常用调制波倒相法。  
-
-![调制方式](Pictures\10e17295c895655789e7c64eaad799e2.png)
