--- a/Reference/电力电子方向关键模块设计指南.md
+++ b/Reference/电力电子方向关键模块设计指南.md
@@ -3,15 +3,61 @@
 作者：SDUEE 23.3 毛晨镔  
 
 - [电力电子方向关键模块设计指南](#电力电子方向关键模块设计指南)
+  - [参考资料](#参考资料)
   - [功率模块与栅极驱动](#功率模块与栅极驱动)
     - [MOSFET选型](#mosfet选型)
     - [PCB布局](#pcb布局)
     - [栅极驱动](#栅极驱动)
+    - [从驱动器到MOS管](#从驱动器到mos管)
+    - [器件取值与选型](#器件取值与选型)
   - [滤波模块](#滤波模块)
+    - [交流滤波](#交流滤波)
+    - [直流滤波](#直流滤波)
   - [采样模块](#采样模块)
+    - [常见电压采样方案](#常见电压采样方案)
+    - [常见电流采样方案](#常见电流采样方案)
+    - [参考源](#参考源)
+    - [常用芯片](#常用芯片)
+    - [注意事项](#注意事项)
   - [辅助电源](#辅助电源)
   - [主控底板](#主控底板)
+    - [主控](#主控)
+    - [底板](#底板)
+    - [屏幕](#屏幕)
   - [数字环路](#数字环路)
+    - [中断设计](#中断设计)
+    - [基本定理](#基本定理)
+    - [数理基础](#数理基础)
+    - [直流量控制](#直流量控制)
+      - [PID](#pid)
+      - [PIR](#pir)
+    - [交流量控制](#交流量控制)
+      - [PR](#pr)
+      - [Sync-PI](#sync-pi)
+    - [MPPT](#mppt)
+      - [电导增量法](#电导增量法)
+      - [扰动观测法](#扰动观测法)
+    - [并机、并网算法](#并机并网算法)
+      - [主从控制](#主从控制)
+      - [下垂控制](#下垂控制)
+      - [虚拟同步机（VSG）](#虚拟同步机vsg)
+      - [PQ控制](#pq控制)
+  - [数字滤波](#数字滤波)
+    - [低通滤波](#低通滤波)
+    - [陷波器](#陷波器)
+  - [调制方法](#调制方法)
+    - [单相调制发波](#单相调制发波)
+      - [单极性](#单极性)
+      - [双极性](#双极性)
+      - [单极性倍频](#单极性倍频)
+    - [三相调制发波](#三相调制发波)
+      - [SPWM](#spwm)
+      - [三次谐波注入的SPWM](#三次谐波注入的spwm)
+      - [SVPWM](#svpwm)
+      - [DPWM](#dpwm)
+
+## 参考资料
+[TI栅极驱动部分FAQs](https://e2e.ti.com/support/power-management-group/power-management/f/power-management-forum/1096147/faq-gate-driver-faq-frequently-asked-questions)
 
 ## 功率模块与栅极驱动
 ### MOSFET选型
@@ -35,12 +81,44 @@ SW节点（桥臂中点与电感）面积尽可能小
 UCC21520两侧地线隔离，下管驱动地、功率地单点连接  
 下管驱动电源到地并联10uF MLCC电容，自举电容必须用MLCC  
 MOS管需要反并联肖特基二极管  
+必要时可以添加RC/RCD吸收电路，具体参数依赖测试，优先优化PCB布线  
 
 ### 栅极驱动
-栅驱只推荐UCC21520，参考手册自举驱动即可  
-DIS直接下拉到地  
+栅驱只推荐UCC21520，自举驱动即可  
+
+![全桥自举驱动](Pictures\image-2.png)
+
+在上管完全导通时，SW节点电压等于母线电压，此时Vg需要高于母线电压，上管才能完全导通。  
+这个电压是由Cboot利用电容两侧电压不变提供的。  
+在下管导通时，通过自举二极管向Cboot充电。此时VDDA就获得了比VSSA高VDD的电压。下管截止，利用电容两侧电压不变，抬高VDDA电压，从而提供正Vgs。  
+自举二极管用于在上管导通时隔离高压VDDA，防止高压直流母线电压窜入低压系统。  
+这种驱动方式优点是**简单可靠**。  
+缺点是**占空比没法做到0-100%**，因为Cboot需要时间充电，下管不能完全截止。  
+这种拓扑因为简单可靠，所以应用极为广泛。  
+
+隔离电源驱动因为功耗极大、开关速率慢，应用极少  
+
+### 从驱动器到MOS管
+在驱动器的OUT引脚到MOS管的栅极之间，还有一些器件。  
+Ron用于抑制振铃。PCB布线就会势必引入寄生电感，在高频开关+方波的高次谐波作用下，寄生电感与Cgs会产生振铃，导致Vgs瞬间突破20V，击穿MOS管的绝缘栅导致炸管、炸驱动。所以需要加大串联电阻，使振荡进入过阻尼状态，减少上升沿过冲。Ron可以**减弱过冲，但是会减慢栅极充电速度**。  
+
+还有Rgs，Rgs作为下拉电阻，在OUT引脚不输出控制电平下，将栅极电压拉低至源极，提供确定电平减少误导通。同时为Qg提供泄放回路，防止栅极电荷累积导致击穿绝缘栅炸管。
+
+MOS管的开关一般是**慢开快关**。关闭二极管的作用就是在关闭MOS管时短路栅极驱动电阻，使得MOS管快速关闭。
+
+### 器件取值与选型
+Rboot、Roff取0Ω（不添加该电阻）  
+Ron一般取1-10Ω，和驱动器、MOS管、PCB布线都有关，**实测取值，取不同的值，看Vgs过冲，选择没有过冲下最小电阻**。
+自举电容Cboot**必须用MLCC**，**开关频率越小，Cboot越大，最小1uF**  
+Cvdd**取值大于5-10倍Cboot**  
+Rgs取10kΩ  
+关闭二极管常用**开关二极管**，1N4148  
+自举二极管**必须用肖特基/快恢复二极管，耐压要大于直流母线电压**，FR307/RS3M  
+剩余无源器件的数值在UCC21520的手册中都有介绍，一般PWM输入不需要滤波，故一般不焊接Cin、Rin  
+所有低压电源引脚需要**1uF或者0.1uF电容去耦**  
 
 ## 滤波模块
+### 交流滤波
 顺序：桥臂电感->滤波电容->共模电感  
 桥臂电感储能，稳流  
 共模电感不储能，只滤波，无法取代桥臂电感  
@@ -53,11 +131,192 @@ LC无源滤波即可，LCL需要增加虚拟阻抗以抑制谐振点电压增益
 桥臂电感在传递函数中等效为一阶滞后，电感过大会极大劣化环路相位裕度  
 常用值：桥臂电感470uH/680uH+滤波电容2uF+共模电感2mH  
 
+### 直流滤波
+电解电容+MKP25电容  
+电解电容不是越大越好，电解电容影响系统惯性  
+
 ## 采样模块
+### 常见电压采样方案
+互感器：只能采交流，信噪比高，隔离能力强，但是**需要额外确定互感器方向**  
+电阻分压：交直流均可，需要高共模运放/隔离运放，精度高  
+
+### 常见电流采样方案
+互感器：只能采交流，信噪比高，隔离能力强，但是**需要额外确定互感器方向**  
+霍尔：交直流均可，精度高，噪声偏大  
+电阻分压：交直流均可，精度高，对共模电压范围及其敏感  
+磁通门：交直流均可，精度高，噪声小，但是很贵  
+
+### 参考源
+用于产生偏置基准电压  
+参数对电赛电源而言没有意义，基本都够用，主要考察输出电压、电流  
+REF20系列，带有Vref、Vref/2双电源输出  
+REF50系列，淘宝可买芯片中理论参数最佳  
+
+### 常用芯片
+互感器：ZMPT101、ZMCT103  
+霍尔：NSM2015  
+参考源:REF2030、REF5025  
+电压采样运放： INA149  
+电流采样运放： INA240、INA241  
+通用运放：OPA2192、OPA2197  
+磁通门：德国莱姆的CKSR系列，大量程噪声低，推荐CKSR15三穿心  
+
+### 注意事项
+信号偏置尽量通过参考源产生  
+模拟环路，跨板传输用差分+双绞线  
+运放输出经过差分电路由伪差分转真差分后到排针  
+采样板集成过零检测，RC低通后送单门限比较器  
+硬件功率因数：电流电压过零信号过异或门，跟随器，RC低通  
+功率因数软件计算即可  
 
 ## 辅助电源
+分隔离、非隔离两种  
+隔离电源导致效率偏低，需要准备非隔离DCDC电源  
+在对效率要求不高时，用隔离方案；效率要求高，用不隔离方案  
+尽量将低压部分完全隔离  
+**实验室35Vdc输入的DCDC一定用不了，喜欢我电源题60V直流电源吗**  
+https://shop113138875.taobao.com  
+**最大400V直流输入，隔离DCDC，恐怖如斯**  
+非隔离电源尽量选择同步Buck拓扑+集成FET的DCDC芯片，以减少设计难度  
 
 ## 主控底板
+### 主控
+建议有FPU、差分ADC、6路互补带死区PWM、输入捕获、CMPSS比较器  
+有真差分直接上真差分，没差分上伪差分，一通道采偏置，一通道采输出  
+尽可能减少直流分量，直流分量输入极有可能引发环路崩溃  
+PWM需要初始化后软件关断，可以通过非门/AQ模块实现  
+
+### 底板
+底板集成OLED/TFT屏幕、PWM驱动、ADC滤波驱动、转串口、按键，所有外设尽量引出  
+PWM初始化后必须软件关断，中断写值后开启  
+根据奈奎斯特采样定理，只有0-fsw/2的信号不发生混叠，fsw/2-fsw之间的信号均会因为数字采样发生混叠，混入第一奈奎斯特区，导致信号干扰  
+因此需要一级抗混叠滤波器，截止频率最高为fsw/2，消除混叠信号  
+第二级RC低通用于储存电荷，瞬间为Chold保持电容充电，滤除运放噪声，需要紧靠ADC引脚  
+模拟输入增加二极管限幅  
+
+### 屏幕  
+屏幕主要三种：OLED、TFT、串口屏  
+OLED：常用0.96'IIC屏幕，低功耗，显示面积小，单色  
+TFT：全彩，功耗居中，常用1.8'  
+串口屏：全彩，UART通信，可触摸，面积最大，一般用来做按钮、UI,耗电量最大,无脑陶晶驰  
+电源题对UI要求很低，显示数据很少，一般0.96寸OLED即可。  
+题目一般有重量/效率要求，用其他屏幕容易寄  
 
 ## 数字环路
+### 中断设计
+PWM触发ADC采样转换，在ADC的EOC中断内完成环路计算  
+环路中断负载低于80%，为主函数留出执行时间  
+只能有一个环路中断，剩余功能全部放主函数while（1）实现  
+任何代码中**不能出现delay，包括主函数**  
 
+### 基本定理
+基尔霍夫定律  
+内模原理：反馈控制器必须包含外界扰动的模型，才能使得闭环系统能够抵抗扰动和系统参数变化，并且调节输出  
+
+### 数理基础
+拉普拉斯变换  
+连续函数离散化，前向差分、后向差分、双线性（Tustin）  
+双线性>后向差分>前向差分  
+
+### 直流量控制
+#### PID  
+需要离散化+抗积分饱和  
+抗积分饱和一般通过积分限幅实现  
+其他方法包括反算/分离积分/积分限幅  
+
+#### PIR
+比例+积分+谐振  
+PI跟PID控制一致，R谐振环节用于抑制特定频率波动  
+常用于整流的直流电压环  
+
+### 交流量控制
+#### PR
+**推荐**  
+瞬时值跟踪  
+内环 kp2-5 kr50  
+外环 kp<0.5 kr 50  
+
+#### Sync-PI
+**极其不推荐**  
+锁相环转DQ系，双PI  
+环路复杂，无法应对零序/负序分量，输出频率抖动，易失锁  
+谐波映射非线性  
+SOGI冲激响应不收敛，PI抖动  
+
+### MPPT
+#### 电导增量法
+爬坡算法，通过对U-I曲线求一阶、二阶导，判断功率是否达到峰值  
+输出功率无抖动  
+
+#### 扰动观测法
+爬坡算法，修改光伏输出电压（DCDC输入电压），观察功率变化，决定爬坡方向  
+输出功率抖动  
+
+### 并机、并网算法
+#### 主从控制
+电压源并电流源  
+电压源建压，电流源均功  
+常用，简单，但是电流源配置不当易引起环流，炸直流电源  
+
+#### 下垂控制
+简易版虚拟同步机，有功调频，无功调幅  
+
+#### 虚拟同步机（VSG）
+通过设定功率、频率，模拟虚拟同步发电机的特性，直接产生电流环指令  
+无缝并网（需要预同步）、并机  
+实现难度大，实现效果好  
+
+#### PQ控制
+在外界建压下，通过设定的有功、无功，产生有功、无功电流，求和得到电流参考  
+相当于进阶版主从控制  
+
+## 数字滤波
+### 低通滤波
+建议RC传递函数离散化  
+少用高阶滤波，相位高度敏感  
+
+### 陷波器
+常用于滤除整流直流侧电压50Hz脉动  
+
+## 调制方法
+**所有高频桥臂输出必须带电感**  
+### 单相调制发波
+**最推荐使用单极性倍频调制**  
+#### 单极性
+一个桥臂50Hz，一个桥臂高频载波，半波周期内只有1个非0电平  
+优点：开关损耗低，谐波少  
+缺点：过零失真大，共模电压大，PWM发波复杂，50Hz桥臂无法自举驱动  
+
+#### 双极性
+对管同时导通，双桥臂高频，半波周期内有±VDC2个非0电平  
+优点：1个PWM模块即可完成，PWM发波简单，共模电压小，无过零失真  
+缺点：开关损耗大，谐波大  
+
+#### 单极性倍频
+双桥臂高频开关，一个搭载正调制波，一个搭载负调制波，半波周期内只有Vdc一个非0电平  
+优点：H桥输出倍频，谐波少，无过零失真  
+缺点：共模电压大，开关损耗大，发波较为复杂（比双极性复杂，比单极性简单）  
+实现方法：调制波倒相法、载波倒相法  
+载波由DSP产生，无法倒相，常用调制波倒相法  
+
+![调制方式](Pictures\10e17295c895655789e7c64eaad799e2.png)
+
+### 三相调制发波
+由于一般为三相三线制发波，必定无零序  
+**三相降低为两自由度系统**，一般为控两相，通过无零序产生第三相调制波  
+电流电压采**线量**，通过线-相关系**反算相量**  
+#### SPWM
+三相的SPWM，每一相都由单个桥臂生成，所以只能采用双极性调制  
+三个桥臂全部工作在高频开关模式  
+桥臂波形为正弦波  
+
+#### 三次谐波注入的SPWM
+通过注入特定相位的三次谐波，利用三次谐波零序特性，提高母线利用率  
+由于SVPWM也可降低母线利用率，故本方法不常用  
+
+#### SVPWM
+分五段式、七段式  
+空间矢量调制，相电压马鞍波  
+母线利用率高  
+
+#### DPWM
