添加参赛复盘,修改设计指南

--- a/Reference/电力电子方向关键模块设计指南.md
+++ b/Reference/电力电子方向关键模块设计指南.md
@@ -69,6 +69,7 @@ Qg大会增大开关损耗，Rds大会增大导通损耗，低Rds会导致大导通损耗
 需要额外添加反并联二极管  
 
 ### PCB布局
+**爬电距离20mil及以上**  
 驱动回路、功率回路都处在高速开关的情况下，跳变沿瞬间有着巨大的dv/dt、di/dt  
 因此对寄生电感、寄生电容及其敏感，寄生参数稍大，即会引起巨大的振铃，导致击穿/炸管  
 功率板上需要集成栅极驱动、功率拓扑、桥臂电感  
