修改参考文件

--- a/Reference/25年国赛及综合测评复盘.md
+++ b/Reference/25年国赛及综合测评复盘.md
@@ -10,6 +10,9 @@ ADC滤波两级,一级RC+跟随,一级在ADC引脚旁边RC
 在准备比赛时就要调好采样模块,确保采样在DSP内复原后与原信号一致  
 排线不要长,尽可能短  
 **爬电距离20mil及以上**  
+DSP核心板需要板载复位按键  
+辅助电源需要准备隔离/非隔离两版  
+尽可能不用LDO,多用DCDC  
 
 ## 综合测评
 逻辑门除了逻辑门,还可以用于方波整形,在LM324+逻辑门时,逻辑门可能用于方波整形  
