修改参考资料中的准备模块列表

--- a/Reference/电力电子方向简介.md
+++ b/Reference/电力电子方向简介.md
@@ -26,7 +26,7 @@
       - [单片机](#单片机)
       - [控制算法](#控制算法)
   - [准备模块](#准备模块)
-    - [功率拓扑](#功率拓扑)
+    - [功能模块](#功能模块)
     - [无源器件](#无源器件)
     - [单片机相关](#单片机相关)
 
@@ -189,7 +189,7 @@ STM32F1单片机（HAL+标准库）
 相关算法可以参考Ti在**C2000Ware数字电源库内的参考设计**，在根目录的sulutions文件夹内，网页版说明在本文件开头的常用网站内给出  
 
 ## 准备模块
-### 功率拓扑
+### 功能模块
 单相/三相H桥（整流逆变）  
 UCC28180/UCC28019硬件PFC  
 四开关Buck-Boost（DC-DC同相升降压，FSBB）  
@@ -197,6 +197,10 @@ UCC28180/UCC28019硬件PFC
 ACAC交流斩波  
 桥式二极管无控整流  
 理想二极管单相/三相无控整流  
+片外ADC/DAC  
+主控底板及软件驱动  
+辅助电源(隔离+非隔离)
+电流电压采样
 
 ### 无源器件
 MKP电容（630V）、滤波电感（饱和电流10A及以上）  
