增加综合测评报告

--- a/Reference/电力电子方向关键模块设计指南.md
+++ b/Reference/电力电子方向关键模块设计指南.md
@@ -1,9 +1,11 @@
 # 电力电子方向关键模块设计指南
+
 本文按电赛电力电子方向常用模块，介绍模块设计注意事项  
 作者：SDUEE 23.3 毛晨镔  
 
 - [电力电子方向关键模块设计指南](#电力电子方向关键模块设计指南)
   - [参考资料](#参考资料)
+  - [基础要求](#基础要求)
   - [功率模块与栅极驱动](#功率模块与栅极驱动)
     - [MOSFET选型](#mosfet选型)
     - [PCB布局](#pcb布局)
@@ -20,8 +22,13 @@
     - [常用芯片](#常用芯片)
     - [注意事项](#注意事项)
   - [辅助电源](#辅助电源)
-  - [主控底板](#主控底板)
-    - [主控](#主控)
+    - [隔离 or 非隔离](#隔离-or-非隔离)
+    - [LDO or DCDC](#ldo-or-dcdc)
+      - [DCDC](#dcdc)
+      - [LDO](#ldo)
+      - [注意事项](#注意事项-1)
+  - [主控模块](#主控模块)
+    - [芯片](#芯片)
     - [底板](#底板)
     - [屏幕](#屏幕)
   - [数字环路](#数字环路)
@@ -42,9 +49,12 @@
       - [下垂控制](#下垂控制)
       - [虚拟同步机（VSG）](#虚拟同步机vsg)
       - [PQ控制](#pq控制)
-  - [数字滤波](#数字滤波)
-    - [低通滤波](#低通滤波)
-    - [陷波器](#陷波器)
+  - [滤波器](#滤波器)
+    - [数字滤波器](#数字滤波器)
+      - [注意事项](#注意事项-2)
+      - [低通滤波](#低通滤波)
+      - [陷波器](#陷波器)
+    - [模拟滤波器](#模拟滤波器)
   - [调制方法](#调制方法)
     - [单相调制发波](#单相调制发波)
       - [单极性](#单极性)
@@ -57,7 +67,11 @@
       - [DPWM](#dpwm)
 
 ## 参考资料
-[TI栅极驱动部分FAQs](https://e2e.ti.com/support/power-management-group/power-management/f/power-management-forum/1096147/faq-gate-driver-faq-frequently-asked-questions)
+[TI栅极驱动部分FAQs](https://e2e.ti.com/support/power-management-group/power-management/f/power-management-forum/1096147/faq-gate-driver-faq-frequently-asked-questions)  
+
+## 基础要求
+**安全、稳定、高效**
+**在能实现相同指标的条件下，系统越简单越好，器件越少越好**  
 
 ## 功率模块与栅极驱动
 ### MOSFET选型
@@ -171,8 +185,9 @@ REF50系列，淘宝可买芯片中理论参数最佳
 功率因数软件计算即可  
 
 ## 辅助电源
-分隔离、非隔离两种  
-隔离电源导致效率偏低，需要准备非隔离DCDC电源  
+### 隔离 or 非隔离
+各有优劣，都要准备  
+隔离电源更加安全；不隔离效率高  
 在对效率要求不高时，用隔离方案；效率要求高，用不隔离方案  
 尽量将低压部分完全隔离  
 **实验室35Vdc输入的DCDC一定用不了，喜欢我电源题60V直流电源吗**  
@@ -180,15 +195,31 @@ https://shop113138875.taobao.com
 **最大400V直流输入，隔离DCDC，恐怖如斯**  
 非隔离电源尽量选择同步Buck拓扑+集成FET的DCDC芯片，以减少设计难度  
 
-## 主控底板
-### 主控
-建议有FPU、差分ADC、6路互补带死区PWM、输入捕获、CMPSS比较器  
+### LDO or DCDC
+#### DCDC  
+利用电力电子中的Buck拓扑降压供电  
+优点：功率大，效率高  
+缺点：PCB面积大，器件多，纹波大  
+
+#### LDO
+利用三极管导通度控制输出电压，对外表现为动态调整的分压电路  
+优点：面积小，拓扑简单，纹波小  
+缺点：电流小，效率低  
+
+#### 注意事项
+**LDO只能给运放供电，剩余的器件供电（串口屏、单片机等）请用DCDC供电**  
+**设计供电时考虑模块功率**  
+**LDO需要降额至原输出电流的50%-80%使用**  
+
+## 主控模块
+### 芯片
+建议有FPU、差分ADC、6路以上可同步互补带死区PWM、输入捕获、CMPSS比较器  
 有真差分直接上真差分，没差分上伪差分，一通道采偏置，一通道采输出  
 尽可能减少直流分量，直流分量输入极有可能引发环路崩溃  
 PWM需要初始化后软件关断，可以通过非门/AQ模块实现  
 
 ### 底板
-底板集成OLED/TFT屏幕、PWM驱动、ADC滤波驱动、转串口、按键，所有外设尽量引出  
+底板集成OLED/TFT屏幕、ADC滤波驱动、转串口、按键、Boot引导，所有外设尽量引出  
 PWM初始化后必须软件关断，中断写值后开启  
 根据奈奎斯特采样定理，只有0-fsw/2的信号不发生混叠，fsw/2-fsw之间的信号均会因为数字采样发生混叠，混入第一奈奎斯特区，导致信号干扰  
 因此需要一级抗混叠滤波器，截止频率最高为fsw/2，消除混叠信号  
@@ -271,13 +302,24 @@ SOGI冲激响应不收敛，PI抖动
 在外界建压下，通过设定的有功、无功，产生有功、无功电流，求和得到电流参考  
 相当于进阶版主从控制  
 
-## 数字滤波
-### 低通滤波
-建议RC传递函数离散化  
-少用高阶滤波，相位高度敏感  
+## 滤波器
+### 数字滤波器
+#### 注意事项
+慎用数字滤波，数字滤波器设计需要考虑**相位延迟、线性相位关系**  
+使用数字滤波器前，请**先计算50Hz下相位延迟，并在环路中进行相位补偿**  
+**慎用高阶滤波器**  
 
-### 陷波器
+#### 低通滤波
+建议RC传递函数离散化  
+
+#### 陷波器
 常用于滤除整流直流侧电压50Hz脉动  
+
+### 模拟滤波器
+**采样信号禁止使用任何形式的有源滤波器**  
+采样信号滤波只能用RC低通，**RC低通后需过一级电压跟随器后进入片内AD**  
+功率拓扑中一律用LC低通滤波，截止频率小于fsw/10  
+可以添加EMI滤波器（共模电感+MKP），用于改善iTHD  
 
 ## 调制方法
 **所有高频桥臂输出必须带电感**  
