--- a/Reference/电力电子方向硬件入门指南.md
+++ b/Reference/电力电子方向硬件入门指南.md
@@ -41,10 +41,6 @@
     - [基准源芯片](#基准源芯片)
     - [PFC控制器](#pfc控制器)
     - [光耦](#光耦)
-  - [部分子系统设计](#部分子系统设计)
-    - [系统供电设计](#系统供电设计)
-    - [滤波器](#滤波器)
-    - [栅极驱动](#栅极驱动)
 
 ---
 
@@ -187,15 +183,18 @@ MKP21和MKP25不建议混用
 +12V/+15V/+15V+-9V  
 高压->低导通电阻+高开关损耗  
 
-1、硬件死区比软件死区更加可靠，在安全方面不要相信任何代码  
-
+栅极驱动**只推荐UCC21520**，性能相当在线，**比牢大更加强健**  
+1、硬件死区比软件死区更加可靠  
 2、驱动电流决定开关速度、导通损耗、MOS最大Qg  
-
 3、高低压隔离+通道间隔离，在爆爆时可以尽可能保护单片机，通道间隔离可以大大提高芯片的适用拓扑  
 
-栅极驱动**只推荐UCC21520**，性能相当在线，**比牢大更加强健**  
+**优先用自举**  
+自举占空比**不能做到0-100%**，建议**5%-95%**，上管自举电容需要时间充电  
 
 **不要用EGxxxx、IRxxxx，这哥俩会大幅提高炸板概率**  
+EG\IR系列均为非隔离栅极驱动  
+驱动电流小，导致开关时间长，损耗大  
+非隔离会在炸管时顺道把低压回路统统击穿    
 
 ### MOSFET  
 **PMOS工艺差，故只用NMOS，不用PMOS**  
@@ -228,6 +227,8 @@ MOSFET根据半导体材料不同分为SiFET、SiCFET、GaNFET
 
 常用器件：
 英飞凌StrongIRFET2系列，英飞凌收购IR国际整流公司后改进IRF系列，推出的新MOS，**跟牢大一样强健**  
+
+GaN系列可以考虑ISG3202，100V GaNFET，集成半桥驱动  
 
 常用封装： TO-220（直插）、TO-263（贴片）  
 
@@ -335,35 +336,3 @@ GBU/GBJ/KBU
 大功率输出的逻辑光耦，一般是单通道使用，导致没有通道互锁等辅助功能  
 常用于只涉及单管的驱动拓扑，多管开关的拓扑更常用隔离半桥栅极驱动器  
 （其实我们也并没有用过任何隔离器件，没有什么是±275V共模输入的INA149解决不了的）  
-
-## 部分子系统设计  
-**在能实现相同指标的条件下，系统越简单越好，器件越少越好**  
-### 系统供电设计
-常用供电方案：
-1、DCDC  
-利用电力电子中的Buck拓扑降压供电  
-优点：功率大，效率高  
-缺点：PCB面积大，期间多，纹波大  
-
-2、LDO
-利用三极管导通度控制输出电压，对外表现为动态调整的分压电路  
-优点：面积小，拓扑简单，纹波小  
-缺点：电流小，效率低  
-
-**LDO只能给运放供电，剩余的器件供电（串口屏、单片机等）请用DCDC供电**  
-**设计供电时考虑模块功率**  
-**LDO需要降额至原输出电流的50%-80%使用**  
-
-### 滤波器  
-模拟滤波用RC低通滤波即可，**RC滤波后需过一级电压跟随器后进入片内AD**  
-**禁止使用任何形式的有源滤波器**  
-慎用数字滤波，数字滤波器设计需要考虑**相位延迟、线性相位关系**  
-使用数字滤波器前，请**先计算50Hz下相位延迟，并在环路中进行相位补偿**  
-功率拓扑中一律用LC低通滤波，截止频率小于fsw/10  
-部分DCM（断续导通）、BCM（临界导通）拓扑需要在功率输入点额外添加EMI滤波器（X电容、Y电容、共模电感、差模电感），用于改善iTHD  
-电源方向极少用到有源滤波器  
-
-### 栅极驱动
-**优先用自举**  
-自举占空比**不能做到0-100%**，建议**5%-95%**，上管自举电容需要时间充电  
-**无脑UCC21520**  
