--- a/Reference/电力电子方向简介.md
+++ b/Reference/电力电子方向简介.md
@@ -38,6 +38,7 @@
 核心部分为控制环路设计与功率拓扑设计  
 是电子设计大赛中比较难的方向之一  
 本科生阶段几乎不涉及数字环路部分讲解，仅涉及部分简单拓扑的分析  
+环路设计方面主要涉及到自动控制理论、信号与系统相关课程  
 
 ## 题目特点
 **对模拟电子技术要求较低**，能完整采到信号、正确添加偏置、实现滞回比较  
@@ -70,16 +71,17 @@ THD：
 输出电流电压的谐波畸变率  
 表示谐波分量多少，即所谓的变流器输出质量  
 低优指标  
+电赛中仅考察单机孤岛状态下的vTHD,并网/iTHD均不作要求  
 
-负载调整率：  
-在不同负载下电压电流输出变化率  
+电源/负载调整率：  
+在不同负载/电源电压下，电压电流输出变化率（对额定状态下相对变化率）  
 表示控制稳定性和环路设计好坏  
-低优指标  
+低优指标，题目给出计算公式  
 
 效率：  
 输出功率/输入功率  
 表示变流器自己消耗的功率大小  
-主要为单片机、屏幕、辅助电源、MOS的开关损耗  
+主要为单片机、屏幕、辅助电源、MOS的开关/导通损耗  
 高优指标  
 
 功率因数：  
@@ -101,7 +103,7 @@ THD：
 复变函数、拉氏变换、电路、模电、数电  
 
 ### 相关专业课：  
-自动控制理论、电力电子技术  
+自动控制理论、信号与系统、电力电子技术  
 
 ### 补充知识：
 变流器控制理论、PWM控制技术、常用功率拓扑及其控制环路设计  
@@ -110,30 +112,27 @@ THD：
 
 ## 注意事项
 ### 软件时序
-1、涉及到PWM发波，所有的计算都需要在一个PWM周期内算完，所以对各种延时比较敏感  
-2、CPU处在高频中断状态，功能能下放到外设就不要用CPU完成（比如通信用外设而不是GPIO模拟）  
-3、PWM/ADC的控制中断为最高优先级，注意做中断保护，慎用中断嵌套，其他中断尽可能短  
-4、提前准备好所有软件算法，测试功能，代码模块化，用结构体/函数封装  
+ - 涉及到PWM发波，所有的计算都需要在一个PWM周期内算完，不要加任何delay  
+ - CPU处在高频中断状态，功能能下放到外设就不要用CPU完成（比如通信用外设而不是GPIO模拟）  
+ - PWM/ADC的控制中断为最高优先级，剩余所有功能均放至主函数执行  
+ - 中断负载不要超过80%，给主函数留时间  
 
 ![数字时序](Pictures/image-5.png)
 
 ### 硬件与拓扑  
-1、部分拓扑浮地输出，需要高压探头、电流探头、高共模输入运放，**能隔离就隔离**  
-2、**功率拓扑建议驱动和MOS集成至一个PCB**  
-3、**功率拓扑和滤波建议分成两个模块**  
-4、**每个高频输出的桥臂都需要串联电感，桥臂电感相同**  
-5、**电源、PWM信号、模拟采样反馈建议留检测点**  
-6、**功率流输出需要留电流电压测试端口，方便测评时接功率分析仪/示波器/万用表**  
-7、功率部分高速开关，杂波多，**单点接地，至少区分功率地和低压地**  
-8、高速开关导致di/dt、dv/dt大，对PCB布线及其敏感，**大电流环路包围面积尽可能小**  
-9、**PCB、芯片多备一点，防止比赛期间用完/炸光**  
-10、**禁止用杜邦线，大电流禁用排线**  
+ - 栅驱+MOS+电感一个PCB，滤波电容一个PCB  
+ - **每个高频输出的桥臂都需要串联电感，桥臂电感相同**  
+ - **电源、PWM信号、模拟采样反馈建议留检测点**  
+ - **功率流输出需要留电流电压测试端口**，方便测评时接功率分析仪/示波器/万用表  
+ - 功率部分大电压，**单点接地，至少区分功率地和低压地，尽力做隔离**  
+ - **PCB、芯片多备一点，防止比赛期间用完/炸光**  
+ - **禁止用杜邦线，大电流禁用排线**  
 
 ### 仪器
-1、如何在没有差分探头下看浮地输出：用没有地线的插排，示波器当单通道用，**示波器两通道地线均直接接到插头的地线**  
-2、仪器上：尽量用原装探头，尽可能减小底线环路面积。非原装的鳄鱼夹在测量Vgs等波形时会引入部分振铃  
-3、需要准备高压探头、电流探头  
-4、变压器先过隔离后过调压，没有隔离谨慎并网  
+ - 如何在没有差分探头下看浮地输出：用没有地线的插排，示波器当单通道用，**示波器两通道地线均直接接到插头的地线**  
+ - 尽量用原装探头，尽可能减小底线环路面积。非原装的鳄鱼夹在测量Vgs等波形时会引入部分振铃  
+ - 需要准备高压探头、电流探头  
+ - 变压器先过隔离后过调压，没有隔离谨慎并网  
 
 ![探头](Pictures\image-21.png)
 
@@ -203,10 +202,10 @@ ACAC交流斩波
 电流电压采样
 
 ### 无源器件
-MKP电容（630V）、滤波电感（饱和电流10A及以上）  
+MKP电容（630V，1uF）、滤波电感（饱和电流10A及以上，470uH‘/680uH）、电解电容（100V/200V，470uF/2200uF）  
 
 ### 单片机相关
 电压电流采样、片外AD/DA  
 屏幕（串口屏/TFT/OLED）  
 单片机核心板（买），**多备几块，防止比赛期间没有备件/备件耗尽**  
-单片机底板（做）（排座连接，底板集成按键、ADC输入滤波+跟随器、屏幕、BootLoader、XH2.54排座、电压插头、地线插头）  
+单片机底板（做）（排座连接，底板集成按键、ADC输入滤波+跟随器、屏幕、BootLoader、电源）  
