修改参考资料

--- a/Reference/电力电子方向硬件入门指南.md
+++ b/Reference/电力电子方向硬件入门指南.md
@@ -226,7 +226,11 @@ MOSFET根据半导体材料不同分为SiFET、SiCFET、GaNFET
 ![功率器件](Pictures/image-6.png)
 
 常用器件：
-英飞凌StrongIRFET2系列，英飞凌收购IR国际整流公司后改进IRF系列，推出的新MOS，**跟牢大一样强健**  
+英飞凌
+OptiMOS 5  
+OptiMOS 6  
+StrongIRFET2  
+StrongIRFET2系列是英飞凌收购IR国际整流公司后改进IRF系列，推出的新MOS，**跟牢大一样强健**  
 
 GaN系列可以考虑ISG3202，100V GaNFET，集成半桥驱动  
 
