添加采样模块原理图，添加数据手册

--- a/Reference/电力电子方向硬件入门指南.md
+++ b/Reference/电力电子方向硬件入门指南.md
@@ -171,9 +171,9 @@ MKP21和MKP25不建议混用
 ### 连接线  
 **电流越大线越粗，先查线径对应最大电流**  
 美标AWG，表示到该线径抽细的次数，**AWG越大，线越细**  
-低压供电（采样、单片机等）：XH2.54  
+低压供电（采样、单片机等）：XH2.54+双绞线  
 功率供电（功率主拓扑、辅助电源输入）：1平方多芯铜线  
-模拟线路可以用XH2.54+双绞线，做好差分传输（个人感觉没必要用SMA/屏蔽）  
+模拟线路用XH2.54+双绞线，必须差分传输（没必要用SMA/屏蔽）  
 
 ## 功率器件  
 ### 栅极驱动器  
