--- a/Reference/电力电子方向软件入门指南.md
+++ b/Reference/电力电子方向软件入门指南.md
@@ -22,23 +22,25 @@
 
 
 ## MCU与工具链  
-基础要求：FPU，差分ADC，6路以上带死区同步PWM  
+基础要求：FPU，10通道及以上ADC，6路以上带死区同步PWM  
 个人观点：TMS320F28388D>TMS320F28379D>STM32H7>TMS320F28335>STM32G4>STM32F4>>STM32F1  
 28388D/28379D为双核DSP，使用时可以当作单核使用以降低系统复杂度  
+个人建议单片机需要会STM32G4/STM32F4+TMS320F28379D/TMS320F28335/TMS320F280049C  
+STM32跑低功耗，C2000跑高性能，取决于题目对功耗的要求  
 
 ### C2000  
 **死贵，TI别惦记你那逼单片机了**  
 建议按照STM32F1->TMS320F28335->TMS320F28379D的路线学习（28335英文手册+资料少+寄存器编程）  
 进阶可以考虑TMS320F280049C/TMS320F28379D/TMS320F28388D  
 工具链：CCS+Sysconfig+C2000Ware、数字电源库、电机控制库+XDS110/XDS100V2  
-缺点：全英文资料，生态差，28335只有寄存器编程  
+缺点：全英文资料，生态差，28335只有寄存器编程，功耗大于32系列  
 优点：性能高  
 *28335不支持sysconfig代码生成，想不到吧（doge）*
 
 ### STM32  
 没用过  
 STM32F1（入门）->STM32F4（通用）/STM32G474（数字电源专用）/STM32H7(高性能)  
-生态好，网上教程一抓一大把  
+生态好，网上教程一抓一大把，功耗低，通用  
 **最低STM32F4，需要支持FPU/DSP**  
 
 ### MSPM0
