添加部分资料

--- a/Reference/电力电子方向关键模块设计指南.md
+++ b/Reference/电力电子方向关键模块设计指南.md
@@ -33,6 +33,7 @@
     - [屏幕](#屏幕)
   - [数字环路](#数字环路)
     - [中断设计](#中断设计)
+    - [硬件保护](#硬件保护)
     - [基本定理](#基本定理)
     - [数理基础](#数理基础)
     - [直流量控制](#直流量控制)
@@ -75,12 +76,12 @@
 
 ## 功率模块与栅极驱动
 ### MOSFET选型
-推荐系列：StrongIRFET2  
+推荐系列：StrongIRFET2/OptiMOS-5/OptiMOS-6  
 MOS耐压（Vds）选100V,漏极电流(Ids)至少20A  
 高耐压会降低MOS开关性能和导通电阻，引入不必要的损耗；低耐压会频繁炸管  
 需要综合考虑栅极电荷、导通电阻  
 Qg大会增大开关损耗，Rds大会增大导通损耗，低Rds会导致大导通损耗  
-需要额外添加反并联二极管  
+需要额外添加反并联二极管,必须用肖特基二极管  
 
 ### PCB布局
 **爬电距离20mil及以上**  
@@ -152,13 +153,13 @@ LC无源滤波即可，LCL需要增加虚拟阻抗以抑制谐振点电压增益
 
 ## 采样模块
 ### 常见电压采样方案
-互感器：只能采交流，信噪比高，隔离能力强，但是**需要额外确定互感器方向**  
+互感器：只能采交流，信噪比高，隔离能力强，功耗极低，但是**需要额外确定互感器方向**  
 电阻分压：交直流均可，需要高共模运放/隔离运放，精度高  
 
 ### 常见电流采样方案
-互感器：只能采交流，信噪比高，隔离能力强，但是**需要额外确定互感器方向**  
+互感器：只能采交流，信噪比高，隔离能力强，功耗极低，但是**需要额外确定互感器方向**  
 霍尔：交直流均可，精度高，噪声偏大  
-电阻分压：交直流均可，精度高，对共模电压范围及其敏感  
+电阻：交直流均可，精度高，对共模电压范围极其敏感  
 磁通门：交直流均可，精度高，噪声小，但是很贵，近似为霍尔的Pro版本  
 
 ### 参考源
@@ -179,7 +180,7 @@ REF50系列，淘宝可买芯片中理论参数最佳
 ### 注意事项
 信号偏置尽量通过参考源产生  
 模拟环路，跨板传输用差分+双绞线  
-运放输出经过差分电路由伪差分转真差分后到排针  
+运放输出经过差分电路由伪差分转真差分后跨板传输  
 采样板集成过零检测，RC低通后送单门限比较器  
 硬件功率因数：电流电压过零信号过异或门，跟随器，RC低通  
 功率因数软件计算即可  
