--- a/Reference/电力电子方向简介.md
+++ b/Reference/电力电子方向简介.md
@@ -71,7 +71,7 @@ THD：
 输出电流电压的谐波畸变率  
 表示谐波分量多少，即所谓的变流器输出质量  
 低优指标  
-电赛中仅考察单机孤岛状态下的vTHD,并网/iTHD均不作要求  
+电赛中仅考察单机孤岛状态下的vTHD,对并网/iTHD均不作要求  
 
 电源/负载调整率：  
 在不同负载/电源电压下，电压电流输出变化率（对额定状态下相对变化率）  
@@ -109,6 +109,7 @@ THD：
 变流器控制理论、PWM控制技术、常用功率拓扑及其控制环路设计  
 这部分内容可以参考硕士毕业论文中的绪论部分  
 控制环路部分以研究生课程为主，本科生相关课程涉及内容较少  
+核心在于电力电子技术与信号与系统、自动控制理论的联动  
 
 ## 注意事项
 ### 软件时序
